--- a/miniprogram/package/translationPackage/pages/translation/translation.json
+++ b/miniprogram/package/translationPackage/pages/translation/translation.json
@@ -1,1 +1,7 @@
-{}
+{
+  "navigationBarBackgroundColor": "#558b2f",
+  "backgroundColor": "#558b2f",
+  "navigationBarTitleText": "图片翻译",
+  "navigationBarTextStyle": "white",
+  "disableScroll": false
+}
