更新UI颜色配置

--- a/miniprogram/package/translationPackage/pages/translation/translation.json
+++ b/miniprogram/package/translationPackage/pages/translation/translation.json
@@ -1,6 +1,6 @@
 {
-  "navigationBarBackgroundColor": "#558b2f",
-  "backgroundColor": "#558b2f",
+  "navigationBarBackgroundColor": "#61a934",
+  "backgroundColor": "#61a934",
   "navigationBarTitleText": "图片翻译",
   "navigationBarTextStyle": "white",
   "disableScroll": false
